--- a/src/main/resources/static/partial/common/layout/navigation.html
+++ b/src/main/resources/static/partial/common/layout/navigation.html
@@ -1,13 +1,10 @@
 <div id="header">
     <div class="logo"><img src="img/common/img_logo_s3.png" alt="TEAMS"></div>
     <div class="topmenu">
-        <div class="top_search">
-            <input type="text" name="" value="" placeholder="Search" class="ip" title="" />
-            <input type="button" name="" class="btn_search" value="" title="" />
-        </div>
         <ul>
-            <li class="w1"><span class="alarm"><span>알림:</span><strong>20</strong></span></li>
-            <li><a href="#"><img src="img/common/btn_topmenu1.gif" alt="새로고침"></a></li>
+            <li><span class="profile"><span ng-bind="nav.UserInfo">홍길동 의왕ICD</span></span></li>
+            <li><span class="alarm"><span>알림:</span><strong>20</strong></span></li>
+            <li><a href="#" ng-click="nav.reload()"><img src="img/common/btn_topmenu1.gif" alt="새로고침"></a></li>
             <li><a href="#" ng-click="nav.logout()"><img src="img/common/btn_topmenu2.gif" alt="logout"></a></li>
         </ul>
     </div>
