--- a/src/main/resources/static/partial/common/login.html
+++ b/src/main/resources/static/partial/common/login.html
@@ -1,26 +1,3 @@
-<!-- <div class="alert alert-danger" ng-show="controller.error">
-    <span class="invalide">{{controller.errorData.message}}</span>
-</div>
-<form role="form" name="controller.loginForm" ng-submit="controller.login()">
-    <div class="form-group">
-        <span class="k-textbox k-space-left">
-            <input type="text" id="icon-left" id="id" class="ip1" placeholder="User name" ng-model="controller.credentials.username" ng-required="true"/>
-            <span ng-show="myForm.input.$valid">ok</span>
-            <div class="k-icon k-i-tick">&nbsp;</div>
-        </span>
-    </div>
-    <div class="form-group">
-        <span class="k-textbox k-space-left" >
-            <input type="password" id="icon-left" placeholder="Password" ng-model="controller.credentials.password" required="required"/>
-            <div class="k-icon k-i-lock">&nbsp;</div>
-        </span>
-    </div>
-</form>
-<kendo-button type="submit" ng-click="controller.log()" class="k-primary">Login</kendo-button>
-    <kendo-button k-on-click="controller.openWindow()">find info</kendo-button>
-
-<span kendo-notification="controller.notf2" k-append-to="'#container'"></span>
-<div id="container" class="k-content"></div> -->
 <span kendo-notification="controller.loginNotify" k-options="controller.notifyOptions"></span>
 <div class="skipmenu">
     <dl>
@@ -72,18 +49,7 @@
                     </div>
                     <!-- //login -->
                     
-                    <div class="ipbox_c">
-                        <ul>
-                            <li>
-                                <h3>Container Tracking<!-- {{'LAB.SAVE' | translate}} --></h3>
-                            </li>
-                            <li class="sh">
-                                <input name="name" type="text" placeholder="Quick Search" class="ip2" value="" title="" ng-model="controller.tracker" />
-                                <!-- <input type="button" name="" class="btn_search" value="" title="" /> -->
-                                <input kendo-button type="button" class="btn_search" title="Quick Search" k-on-click="controller.tracking()" />
-                            </li>
-                        </ul>
-                    </div>
+                    
                     
                     <div class="ipbox_b">
                         
@@ -141,8 +107,16 @@
                         </div>
                         <!-- //notice -->
                         <script>fn_article('bt','notice')</script>
+                        
+                        <div class="ipbox_c">
+                            <ul>
+                                <li class="sh">
+                                    <input name="name" type="text" placeholder="Quick Search" class="ip2" value="" title="" ng-model="controller.tracker" />
+                                    <input type="button" name="" class="btn_search" value="" title="" k-on-click="controller.tracking()"/>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
-                    
                 </div>
             </div>
         </div>
